Prevent overflowing text in the intro section on the book-detail page

--- a/src/pages/Book_Detail.css
+++ b/src/pages/Book_Detail.css
@@ -31,6 +31,7 @@
 }
 .book-content-container {
   height: 100%;
+  margin-bottom: 1rem;
   text-align: left;
   display: flex;
   flex-direction: column;
@@ -71,4 +72,8 @@
 }
 
 .intro {
+}
+.ellipsis {
+  overflow: hidden;      /* 넘치는 텍스트는 보이지 않도록 설정 */
+  text-overflow: ellipsis; /* 넘치는 텍스트를 '...'으로 표시 */
 }
